--- a/multiagent/requirements.txt
+++ b/multiagent/requirements.txt
@@ -7,4 +7,8 @@ seaborn>=0.11.0
 scikit-learn>=1.1.0
 yfinance>=0.1.70
 plotly>=5.0.0
-dash>=2.0.0 
+dash>=2.0.0
+crewai>=0.28.0
+langchain>=0.1.0
+langchain-groq>=0.0.1
+langchain-community>=0.0.10 
