--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 # Core LLM and AI packages
 google-generativeai>=0.3.0
+openai>=1.0.0
+crewai>=0.1.0
 sentence-transformers>=2.2.0
 chromadb>=0.4.0
 hf_xet>=0.0.1
@@ -30,3 +32,5 @@ sentence-transformers>=2.2.0
 tqdm>=4.65.0
 scikit-learn>=1.3.0
 
+# Testing
+pytest>=7.0.0 
