--- a/ML/requirements.txt
+++ b/ML/requirements.txt
@@ -3,6 +3,8 @@ pandas>=2.0.0
 numpy>=1.24.0
 scikit-learn>=1.3.0
 
+yfinance>=0.2.0
+
 # API and environment management
 requests>=2.31.0
 python-dotenv>=1.0.0
